# 2024-conference-tutorial

./: README.md  chapter1_nlp.ipynb  chapter2_embedding.ipynb  chapter3_vector_db.ipynb  chapter4_langchain_create_db.ipynb  chapter5_langchain_rag_chat.ipynb  chapter6_fastapi.ipynb  chapter6_main.py  pyproject.toml
data/: sample_review_data.csv
