[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = "conference tutorial by Joowon, Kim"
authors = ["Joowon, Kim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 < 3.13"
python-dotenv = "^1.0.0"
fastapi = "^0.111.0"
openai = "^1.34.0"
tiktoken = "^0.7.0"
pydantic-settings = "^2.3.3"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"
uvicorn = "^0.30.1"
pandas = "^2.2.2"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-pinecone = "^0.1.1"
langchain-openai = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = {version = "^23.1.0", allow-prereleases = true}
ipykernel = "^6.21.1"
pytest = "7.2.0"
ruff = "^0.0.257"
pytest-asyncio = "^0.21.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
